refactor(citrus-3.0): Update dependencies